@@ -11,4 +11,4 @@ pm_to_blib*
 .lwpcookies
 cover_db
 pod2htm*.tmp
-Wolowitz-*
+Locale-Wolowitz-*
