@@ -1,5 +1,5 @@
-name    = Wolowitz
-version = 0.1
+name    = Locale-Wolowitz
+version = 0.2
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
